apps/cloud/omni/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: omni
spec:
  redirectScheme:
    scheme: https
    permanent: true
